some technical updates
Fixed wortsammler, fixed some encodings, updated gem version
performed bundle update to solve of githubs vulnerability warnings
added default for encoding to make it work in a gitpod hospice

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ launch.json
 30_sources/SRC_Zupfnoter/sf2_sources/backups/*
 30_sources/SRC_Zupfnoter/sf2_sources/wav/01_solo-G1.wav
 30_sources/SRC_Zupfnoter/sf2_sources/*/*
+30_sources/SRC_Zupfnoter/src/.sass-cache
